<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2025 Pachli Association
  ~
  ~ This file is a part of Pachli.
  ~
  ~ This program is free software; you can redistribute it and/or modify it under the terms of the
  ~ GNU General Public License as published by the Free Software Foundation; either version 3 of the
  ~ License, or (at your option) any later version.
  ~
  ~ Pachli is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even
  ~ the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General
  ~ Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with Pachli; if not,
  ~ see <http://www.gnu.org/licenses>.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:focusable="true"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <ImageView
        android:id="@+id/quote_status_avatar"
        android:layout_width="@dimen/timeline_quoted_status_avatar_width"
        android:layout_height="@dimen/timeline_quoted_status_avatar_height"
        android:layout_marginStart="@dimen/account_avatar_margin"
        android:contentDescription="@string/action_view_profile"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/avatar_default" />

    <ImageView
        android:id="@+id/quote_status_avatar_inset"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:contentDescription="@null"
        android:importantForAccessibility="no"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/quote_status_avatar"
        app:layout_constraintEnd_toEndOf="@id/quote_status_avatar"
        tools:src="#000"
        tools:visibility="visible" />

    <app.pachli.core.ui.RoleChipGroup
        android:id="@+id/quote_roleChipGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        app:chipSpacingVertical="4dp"
        app:layout_constraintStart_toStartOf="@id/quote_status_display_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/quote_status_avatar"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/quote_status_display_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="@dimen/status_display_name_padding_end"
        android:ellipsize="end"
        android:importantForAccessibility="no"
        android:maxLines="1"
        android:textSize="?attr/status_text_small"
        android:textStyle="normal|bold"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@id/quote_status_meta_info"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/quote_status_avatar"
        app:layout_constraintTop_toBottomOf="@id/quote_roleChipGroup"
        tools:text="Ente r the void you foooooo"
        tools:ignore="SelectableText" />

    <TextView
        android:id="@+id/quote_status_meta_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="14dp"
        android:importantForAccessibility="no"
        android:textSize="?attr/status_text_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/quote_status_display_name"
        tools:text="13:37"
        tools:ignore="SelectableText" />

    <TextView
        android:id="@+id/quote_status_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:importantForAccessibility="no"
        android:maxLines="1"
        android:textSize="?attr/status_text_small"
        app:layout_constraintEnd_toStartOf="@id/quote_account_pronouns"
        app:layout_constraintStart_toStartOf="@id/quote_status_display_name"
        app:layout_constraintTop_toBottomOf="@id/quote_status_display_name"
        app:layout_constraintHorizontal_weight="1"
        app:layout_goneMarginEnd="14dp"
        tools:ignore="SelectableText"
        tools:text="\@Entenhausen@birbsarecooooooooooool.site" />

    <app.pachli.core.ui.PronounsChip
        android:id="@+id/quote_account_pronouns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        app:layout_constraintBaseline_toBaselineOf="@id/quote_status_username"
        app:layout_constraintStart_toEndOf="@id/quote_status_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_max="@dimen/pronounChip_maxWidth"
        tools:ignore="SelectableText"
        tools:text="he/him" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/quote_guideline_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_begin="@dimen/account_avatar_margin"
        android:orientation="vertical" />

    <app.pachli.core.ui.ClickableSpanTextView
        android:id="@+id/quote_status_content_warning_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="14dp"
        android:hyphenationFrequency="full"
        android:importantForAccessibility="no"
        android:lineSpacingMultiplier="1.1"
        android:textSize="?attr/status_text_small"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/quote_guideline_body"
        app:layout_constraintTop_toBottomOf="@id/quote_status_username"
        tools:text="content warning which is very long and it doesn't fit"
        tools:visibility="visible" />

    <Button
        android:id="@+id/quote_status_content_warning_button"
        style="@style/AppButton.Outlined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:importantForAccessibility="no"
        android:minWidth="150dp"
        android:minHeight="0dp"
        android:paddingLeft="16dp"
        android:paddingTop="4dp"
        android:paddingRight="16dp"
        android:paddingBottom="4dp"
        android:textAllCaps="true"
        android:textOff="@string/post_content_warning_show_more"
        android:textOn="@string/post_content_warning_show_less"
        android:textSize="?attr/status_text_small"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/quote_guideline_body"
        app:layout_constraintTop_toBottomOf="@id/quote_status_content_warning_description"
        tools:text="@string/post_content_warning_show_more"
        tools:visibility="visible" />

    <app.pachli.core.ui.ClickableSpanTextView
        android:id="@+id/quote_status_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="14dp"
        android:focusable="true"
        android:hyphenationFrequency="full"
        android:importantForAccessibility="no"
        android:lineSpacingMultiplier="1.1"
        android:textSize="?attr/status_text_small"
        android:ellipsize="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/quote_guideline_body"
        app:layout_constraintTop_toBottomOf="@id/quote_status_content_warning_button"
        tools:text="This is a status" />

    <Button
        android:id="@+id/quote_button_toggle_content"
        style="@style/AppButton.Outlined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        android:minWidth="150dp"
        android:minHeight="0dp"
        android:paddingLeft="16dp"
        android:paddingTop="4dp"
        android:paddingRight="16dp"
        android:paddingBottom="4dp"
        android:textAllCaps="true"
        android:textSize="?attr/status_text_small"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/quote_guideline_body"
        app:layout_constraintTop_toBottomOf="@id/quote_status_content"
        tools:text="@string/post_content_show_less"
        tools:visibility="visible" />

    <app.pachli.core.ui.PreviewCardView
        android:id="@+id/quote_status_card_view"
        style="@style/Pachli.Widget.PreviewCardView.Quoted"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/quote_guideline_body"
        app:layout_constraintTop_toBottomOf="@id/quote_button_toggle_content"
        tools:visibility="visible" />

    <app.pachli.core.ui.AttachmentsView
        android:id="@+id/quote_attachmentGrid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/status_media_preview_margin_top"
        android:layout_marginEnd="14dp"
        android:background="@drawable/media_preview_outline"
        android:importantForAccessibility="noHideDescendants"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/quote_guideline_body"
        app:layout_constraintTop_toBottomOf="@id/quote_status_card_view"
        tools:visibility="gone" />

    <app.pachli.core.ui.PollView
        android:id="@+id/quote_status_poll"
        style="@style/Pachli.Widget.PollView.Quoted"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="14dp"
        android:textSize="?status_text_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/quote_guideline_body"
        app:layout_constraintTop_toBottomOf="@id/quote_attachmentGrid"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/quote_translationProvider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="14dp"
        android:textSize="?attr/status_text_small"
        android:drawablePadding="4dp"
        app:layout_constraintStart_toStartOf="@+id/quote_guideline_body"
        app:layout_constraintTop_toBottomOf="@id/quote_status_poll"
        tools:text="Translation provider: DeepL"
        tools:ignore="SelectableText"
        tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
